HWPI fix pager spacing.#2608

--- a/openscholar/themes/hwpi_basetheme/css/hwpi.base.css
+++ b/openscholar/themes/hwpi_basetheme/css/hwpi.base.css
@@ -763,6 +763,11 @@ div.warning .message-wrapper {
 
 
 /* Pagers */
+
+.item-list .pager li {
+    padding: 0.7em;
+}
+
 ul.pager li {
   padding: 0;
   margin: 0;
